Fix vertical gap between ProductPurchaseFeaturesList items
and CurrentPlanHeader items.

--- a/client/blocks/product-purchase-features/product-purchase-features-list/style.scss
+++ b/client/blocks/product-purchase-features/product-purchase-features-list/style.scss
@@ -9,7 +9,7 @@
 	page-break-inside: avoid; // For Firefox
 	break-inside: avoid;
 
-	margin-top: 12px;
+	padding-top: 12px;
 }
 
 .product-purchase-features-list__item .purchase-detail {
